# fitbite

./: .gitignore  README.md
app/: .env.example  .gitignore  .npmrc  README.md  app.json  package-lock.json  package.json
app/scripts/: gen-icons.mjs
app/src/app/: _layout.tsx  index.tsx  welcome.tsx
app/src/components/: BarChart.tsx  Button.tsx  Calendar.tsx  Card.tsx  ChipGroup.tsx  ComingSoon.tsx  DishCard.tsx  Field.tsx  FieldRow.tsx  GradientHeader.tsx  Icon.tsx  LineChart.tsx  Logo.tsx  MacroBar.tsx  MacroChips.tsx  MacroGauge.tsx  MacroRing.tsx  MacroStat.tsx  MacroSummary.tsx  OptionRow.tsx  Pill.tsx  ScreenContainer.tsx  SegmentedControl.tsx  SelectCard.tsx  Stepper.tsx  StreakBadge.tsx  Tag.tsx  TargetRow.tsx  Text.tsx  Thumb.tsx  Toggle.tsx  index.ts
app/src/lib/: api.ts  foodCategory.ts  supabase.ts
app/src/theme/: index.ts  tokens.json  useResponsive.ts
app/src/types/: api.ts  (+1 more)
docs/: FitBite.docx  FitBite_Colour_Scheme.docx  UI_SPEC.md
service/: .env.example  README.md  pyproject.toml  seed.py  seed_users.py
service/app/: config.py  deps.py  main.py
service/app/models/: profile.py  scan.py
service/app/prompts/: extract_menu.txt
service/app/routers/: health.py  scan.py  targets.py
service/app/services/: claude_client.py  extraction.py  persistence.py  scoring.py  targets.py
service/tests/: test_extraction.py  test_scan_smoke.py  test_scoring.py  test_targets.py  test_targets_api.py
service/tests/fixtures/: claude_extract_response.json
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_add_carbs_fat_macros.sql
(+22 files in other folders)
