[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fitbite-service"
version = "0.1.0"
description = "FitBite FastAPI service: Claude vision menu extraction + deterministic Fit Score recommendations"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "anthropic>=0.40",
  "pyjwt>=2.8",
  "supabase>=2.6",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
